popup gallery overlapping issue fixed

--- a/assets/front-end/css/view/quick-view.css
+++ b/assets/front-end/css/view/quick-view.css
@@ -578,10 +578,3 @@
 .theme-savoy .eael-product-popup .eael-product-popup-ready ~ #elementor-lightbox-slideshow-single-img {
   display: none !important;
 }
-.theme-savoy .eael-product-popup .eael-product-popup-details figure.woocommerce-product-gallery__wrapper > div {
-  opacity: 0 !important;
-}
-.theme-savoy .eael-product-popup .eael-product-popup-details figure.woocommerce-product-gallery__wrapper > div:first-child,
-.theme-savoy .eael-product-popup .eael-product-popup-details figure.woocommerce-product-gallery__wrapper > div.flex-active-slide {
-  opacity: 1 !important;
-}
